SONAR-9850 Remove scrollbar from the "Similar Issues" filter popup

--- a/server/sonar-web/src/main/less/components/issues.less
+++ b/server/sonar-web/src/main/less/components/issues.less
@@ -382,7 +382,7 @@ input.issue-action-options-search {
   background-color: #ccc;
 }
 
-.issue .menu {
+.issue .menu:not(.issues-similar-issues-menu) {
   max-height: 120px;
   overflow: auto;
 }
